--- a/style.css
+++ b/style.css
@@ -480,44 +480,39 @@ nav ul li a:hover::before{font-size: 14px;}
 
 /* modals */
 .modal {
-	display: none; /* Hidden by default */
-	position: fixed; /* Stay in place */
-	z-index: 1; /* Sit on top */
+	display: none;
+	position: fixed;
+	z-index: 1;
 	left: 0;
 	top: 0;
-	width: 100%; /* Full width */
-	height: 100%; /* Full height */
-	overflow: auto; /* Enable scroll if needed */
-	background-color: rgb(0,0,0); /* Fallback color */
-	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	width: 100%;
+	height: 100%;
+	background-color: #000000; /* fallback */
+	background-color: #00000050;
 }
-.modal-header {
-	padding: 2px 16px;
-	background-color: #5cb85c;
-	color: white;
-}
-.modal-body {padding: 2px 16px;}
+.modal-body {padding: 2px 16px; margin-top: 20px; margin-bottom: 20px;}
+.modal-header,
 .modal-footer {
-	padding: 2px 16px;
-	background-color: #5cb85c;
-	color: white;
+	padding: 2px 10px;
+	color: #748c6a;
 }
 .modal-content {
-	background-color: #fefefe;
-	margin: 15% auto; /* 15% from the top and centered */
-	padding: 20px;
-	border: 1px solid #888;
-	width: 80%; /* Could be more or less, depending on screen size */
+	background-color: #aeb79b;
+	margin: 15% auto;
+	padding: 15px;
+	border: 1px solid #abc1ad;
+	border-radius: 15px;
+	width: 80%;
 }
 .close {
-	color: #aaa;
+	color: #748c6a;
 	float: right;
 	font-size: 28px;
 	font-weight: bold;
 }
 .close:hover,
 .close:focus {
-	color: black;
+	color: #8ca880;
 	text-decoration: none;
 	cursor: pointer;
 } 
