--- a/style.css
+++ b/style.css
@@ -450,8 +450,7 @@ nav ul li a:hover::before{font-size: 14px;}
 	border-radius: 15px;
 	filter: brightness(80%);
 	transition: 0.5s;
-	width: 600px;
-	height: 400px;
+	width: 100%;
 }
 .tab h3 button{
 	color: #5b7555;
@@ -501,12 +500,17 @@ nav ul li a:hover::before{font-size: 14px;}
 	top: 0;
 	width: 100%;
 	height: 100%;
+	overflow: auto;
 	background-color: #000000; /* fallback */
-	background-color: #00000050;
+	background-color: rgba(0, 0, 0, 0.5);
 }
 .modal-body {padding: 2px 16px; margin-top: 20px; margin-bottom: 20px;}
-.modal-header,
-.modal-footer {
+.modal-body img{
+	padding-top: 20px;
+	border-radius: 20px;
+	width: 100%;
+}
+.modal-header {
 	padding: 2px 10px;
 	color: #748c6a;
 }
