--- a/style.css
+++ b/style.css
@@ -264,12 +264,7 @@ nav ul li a:hover::before{font-size: 14px;}
 
 /* multipicture */
 
-.multipicture{
-	padding-left: 0;
-	padding-right: 0;
-	margin-left: 0;
-	margin-right: 0;
-}
+.multipicture{padding-left: 0; padding-right: 0; margin-left: 0; margin-right: 0;}
 /* cycle */
 .multipicture.cycles{display: flex;}
 .multipicture .cycle1,
@@ -334,11 +329,7 @@ nav ul li a:hover::before{font-size: 14px;}
 	filter: brightness(30%);
 	z-index: 0;
 }
-.multipicture .swipe1{
-	transform: translate(-10%, 0);
-	border-radius: 20px;
-	position: absolute;
-}
+.multipicture .swipe1{transform: translate(-10%, 0); border-radius: 20px; position: absolute;}
 .multipicture .swipe2{transform: translate(-30%, 0); position: absolute;}
 .multipicture .swipe3{transform: translate(-50%, 0); position: absolute;}
 .multipicture .swipe4{transform: translate(-70%, 0); position: absolute;}
@@ -427,11 +418,7 @@ nav ul li a:hover::before{font-size: 14px;}
 
 /* lists */
 
-.lists{
-	margin-top: 15px;
-	display: flex;
-	flex-wrap: wrap;
-}
+.lists{	margin-top: 15px; display: flex; flex-wrap: wrap;}
 .list{flex-basis: 20%;}
 .list:hover{font-size: 16px;}
 .list h3{margin-bottom: 5px;}
@@ -439,11 +426,7 @@ nav ul li a:hover::before{font-size: 14px;}
 
 /* tabs */
 
-.tabs{
-	margin-top: 15px;
-	display: flex;
-	flex-wrap: wrap;
-}
+.tabs{ margin-top: 15px; display: flex; flex-wrap: wrap;}
 .tab{flex-basis: 40%;}
 .tab p{margin-bottom: 15px;}
 .tab img{
@@ -466,21 +449,13 @@ nav ul li a:hover::before{font-size: 14px;}
 
 /* cards */
 
-.cards{
-	margin-top: 15px;
-	display: flex;
-	flex-wrap: wrap;
-}
+.cards{margin-top: 15px; display: flex;	flex-wrap: wrap;}
 .card{flex-basis: 30%;}
 
 /* timeline */
 
 .timeline{margin-top: 20px;}
-.point{
-	margin: 15px;
-	margin-bottom: 25px;
-	transition: 0.5s;
-}
+.point{	margin: 15px; margin-bottom: 25px; transition: 0.5s;}
 .point .feather{
 	display: inline-block;
 	transition: 0.35s;
@@ -493,15 +468,8 @@ nav ul li a:hover::before{font-size: 14px;}
 
 /* gallery */
 
-.section.gallery{
-	display: flex;
-	flex-wrap: wrap;
-	padding: 50px;
-}
-.section.gallery h2{
-	padding-bottom: 30px;
-	flex-basis: 100%;
-}
+.section.gallery{display: flex;	flex-wrap: wrap;}
+.section.gallery h2{padding-bottom: 30px; flex-basis: 100%;}
 .section.gallery img{
 	display: flex;
 	flex-basis: 50%;
@@ -510,9 +478,7 @@ nav ul li a:hover::before{font-size: 14px;}
 	filter: brightness(60%);
 	transition: 0.5s;
 }
-.section.gallery img:hover{
-	filter: brightness(100%);
-}
+.section.gallery img:hover{filter: brightness(100%);}
 
 /* modals */
 .modal {
@@ -528,15 +494,20 @@ nav ul li a:hover::before{font-size: 14px;}
 	background-color: rgba(0, 0, 0, 0.5);
 }
 .modal-body {padding: 2px 16px; margin-top: 20px; margin-bottom: 20px;}
-.modal-body img{
-	padding-top: 20px;
-	border-radius: 20px;
-	width: 100%;
-}
-.modal-header {
-	padding: 2px 10px;
+.modal-body p {font-size: 18px;}
+.modal-body img{padding-top: 20px; border-radius: 20px;	width: 100%;}
+.modal-header {	padding: 2px 10px; color: #748c6a;}
+.modal-header a {
 	color: #748c6a;
+	text-decoration: none;
+	float: right;
+	font-size: 20px;
+	font-weight: bold;
+	scale: 1;
+	transition: 0.5s;
+	padding-right: 25px;
 }
+.modal-header a:hover {	color: #64775b; scale: 1.1;}
 .modal-content {
 	background-color: #aeb79b;
 	margin: 15% auto;
@@ -552,12 +523,15 @@ nav ul li a:hover::before{font-size: 14px;}
 	float: right;
 	font-size: 28px;
 	font-weight: bold;
+	scale: 1;
+	transition: 0.3s;
 }
 .close:hover,
 .close:focus {
-	color: #8ca880;
+	color: #64775b;
 	text-decoration: none;
 	cursor: pointer;
+	scale: 1.1;
 } 
 
 /* icons */
