--- a/style.css
+++ b/style.css
@@ -397,11 +397,9 @@ nav ul li a:hover::before{font-size: 14px;}
 }
 .float:hover{
 	background-color: #cdddbd;
-	transform: translateY(-20px);
-	rotate: -1 -1 -1 5deg;
-	margin-top: 25px;
+	transform: translateY(-20px) rotate(-5deg);
 	scale: 1.02;
-	font-size: 20px;
+	box-shadow: 0 0 10px rgba(180, 180, 180, 0.2);
 }
 .bx-section:hover .float{background-color: #d4e0c5;}
 .bx-section:hover .float:hover{background-color: #cdddbd;}
