--- a/style.css
+++ b/style.css
@@ -402,7 +402,7 @@ nav ul li a:hover::before{font-size: 14px;}
 	box-shadow: 0 0 10px rgba(180, 180, 180, 0.2);
 }
 .bx-section:hover .float{background-color: #d4e0c5;}
-.bx-section:hover .float:hover{background-color: #cdddbd;}
+.bx-section:hover .float:hover{background-color: #cdddbd; box-shadow: 0 0 10px rgba(50, 50, 50, 0.1);}
 
 /* txt */
 
@@ -462,7 +462,7 @@ nav ul li a:hover::before{font-size: 14px;}
 	margin-right: 10px;
 }
 .point .ptext{display: inline-block;}
-.point:hover{transform: translateX(20px); scale: 1.02; font-size: 20px;}
+.point:hover{transform: translateX(2%); scale: 1.02;}
 .point:hover .feather{margin-right: 15px; scale: 1.2;}
 
 /* gallery */
