--- a/style.css
+++ b/style.css
@@ -439,7 +439,7 @@ nav ul li a:hover::before{font-size: 14px;}
 }
 .tab:hover h3 button{scale: 0.8;}
 .tab:hover img{border-radius: 15px;	filter: brightness(100%);}
-.tab a:hover img{filter: brightness(120%)}
+.tab a:hover img{border-radius: 25px; transform: scale(1.05); box-shadow:0 0 10px rgba(0, 0, 0, 0.2)}
 .tab.float:hover{rotate: -1 -1 -1 2deg;}
 
 /* cards */
