better gallery image animation

--- a/style.css
+++ b/style.css
@@ -439,7 +439,7 @@ nav ul li a:hover::before{font-size: 14px;}
 }
 .tab:hover h3 button{scale: 0.8;}
 .tab:hover img{border-radius: 15px;	filter: brightness(100%);}
-.tab a:hover img{border-radius: 25px; transform: scale(1.05); box-shadow:0 0 10px rgba(0, 0, 0, 0.2)}
+.tab a:hover img{border-radius: 25px; transform: scale(1.05); box-shadow: 0 0 10px rgba(0, 0, 0, 0.2)}
 .tab.float:hover{rotate: -1 -1 -1 2deg;}
 
 /* cards */
@@ -475,7 +475,7 @@ nav ul li a:hover::before{font-size: 14px;}
 	filter: brightness(60%);
 	transition: 0.5s;
 }
-.section.gallery img:hover{filter: brightness(100%);}
+.section.gallery img:hover{transform: rotate(5deg) scale(1.05); filter: brightness(100%); box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);}
 
 /* modals */
 .modal {
