--- a/style.css
+++ b/style.css
@@ -446,6 +446,7 @@ nav ul li a:hover::before{font-size: 14px;}
 
 .cards{margin-top: 15px; display: flex;	flex-wrap: wrap;}
 .card{flex-basis: 30%;}
+.card h3{margin-bottom: 8px;}
 
 /* timeline */
 
