added lucide and simple icons, added lemmy

--- a/style.css
+++ b/style.css
@@ -589,7 +589,7 @@ nav ul li a:hover::before{font-size: 14px;}
 	scale: 1.2;
 }
 
-/* icons */
+/* icons and links */
 
 .inline{display: inline-block;}
 
@@ -606,6 +606,22 @@ nav ul li a:hover::before{font-size: 14px;}
 .icons a:hover{
 	color: #6d8667;
 	transform: translateY(-5px) scale(1.5);
+	/* margin: 5px 20px; */
+}
+
+.links{margin-top: 15px;}
+.links a{
+	text-decoration: none;
+	font-size: 24px;
+	margin: 5px 10px;
+	color: #7e9275;
+	display: inline-block;
+	transition: 0.5s;
+}
+.links:hover a{transform: scale(1.02); margin: 5px 15px;}
+.links a:hover{
+	color: #6d8667;
+	transform: translateY(-5px) scale(1.05);
 	/* margin: 5px 20px; */
 }
 
