--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ nav ul li:hover{transform: scale(1.3);}
 nav ul li a{
 	color: #86a17b;
 	text-decoration: none;
-	font-size: 36px;
+	font-size: 24px;
 	position: relative;
 	transition: 0.5s;
 }
@@ -110,11 +110,11 @@ nav ul li a{
 nav ul li a::after{
 	content: '';
 	width: 0;
-	height: 3px;
-	background: #7f9581;
+	height: 2px;
+	background: #6d8369;
 	position: absolute;
 	left: 0;
-	bottom: 3px;
+	bottom: -3px;
 	transition: 0.5s;
 }
 nav ul li a:hover::after{width: 90%;}
