--- a/style.css
+++ b/style.css
@@ -642,6 +642,6 @@ nav ul li a:hover::before{font-size: 14px;}
 	color: #92ad8d;
 	transition: 0.5s;
 }
-.footer .feather{color: #b6b590; transition: transform 0.5s, margin 0.5s, color 1.2s;}
+.footer i{color: #b6b590; transition: font-size 0.5s, margin 0.5s, color 1.2s;}
 .footer:hover{font-size: 24px;}
-.footer:hover .feather{transform: scale(1.5); margin: 0 12px; color: #a1b474;}
+.footer:hover i{font-size: 32px; margin: 0 8px; color: #a1b474;}
